# OpencvPractice

./: .gitignore  path.txt
FaceLandmarkDetection/: CMakeLists.txt  CMakeSettings.json
FaceLandmarkDetection/src/: CMakeLists.txt  drawLandmarks.hpp  faceStable.cpp  faceStable.h  facialLandmarkDetection.cpp  renderFace.hpp  smooth.cpp  smooth.h  stable.cpp
