cmake_minimum_required(VERSION 3.2)
project(faceLandmarkDetect)

set(SOURCE_FILES facialLandmarkDetection.cpp)

#set(OpenCV_INCLUDE_PATH "D:\\Library\\opencv\\Mingw_build\\install\\include")
#set(OpenCV_DIR "D:\\Library\\opencv\\Mingw_build\\win-install")
#set(OpenCV_DIR "D:\\Library\\opencv\\Build\\install")
FIND_PACKAGE(OpenCV REQUIRED)

add_executable(${PROJECT_NAME} ${SOURCE_FILES})
add_executable(faceStable faceStable.cpp faceStable.h smooth.cpp smooth.h)
add_executable(stable stable.cpp)
#set(OpenCV_DIR "D:\\Library\\opencv\\build")
#set(OpenCV_LIBS "D:\\Library\\opencv\\build\\x64\\vc15\\lib\\opencv_world346d.lib")
#set(OpenCV_INCLUDE_PATH "D:\\Library\\opencv\\Mingw_build\\include" )
INCLUDE_DIRECTORIES(${OpenCV_INCLUDE_PATH})

IF (OpenCV_FOUND)
    MESSAGE(${OpenCV_LIBS})
    TARGET_LINK_LIBRARIES(${PROJECT_NAME} ${OpenCV_LIBS})
    TARGET_LINK_LIBRARIES(stable ${OpenCV_LIBS})
    TARGET_LINK_LIBRARIES(faceStable ${OpenCV_LIBS})
ELSE (OpenCV_FOUND)
    MESSAGE(FATAL_ERROR "OpenCV library not found")
ENDIF (OpenCV_FOUND)
